--- a/src/app/pages/especialista/mi-perfil/mi-perfil.component.html
+++ b/src/app/pages/especialista/mi-perfil/mi-perfil.component.html
@@ -43,10 +43,10 @@
                             (click)="goTo('/especialista/mis-horarios','agregar')">
                             Agregar
                         </button>
-                        <button class="btn btn-outline-primary mx-5" type="button"
+                        <!-- <button class="btn btn-outline-primary mx-5" type="button"
                             (click)="goTo('/especialista/mis-horarios','editar')">
                             Modificar
-                        </button>
+                        </button> -->
                     </div>
                     <!-- FIN DE MOSTRAR APP MIS HORARIOS -->
                 </div>
