--- a/src/app/pages/especialista/mis-horarios/mis-horarios.component.html
+++ b/src/app/pages/especialista/mis-horarios/mis-horarios.component.html
@@ -211,12 +211,12 @@
         </div>
         <!-- FIN DE AGREGAR UNA JORNADA -->
 
-        <!-- INICIO DE SI QUIERE EDITAR UNA JORNADA -->
+        <!-- INICIO DE SI QUIERE EDITAR UNA JORNADA
         <div *ngIf="accion == 'editar' && lunesHorario && martesHorario &&
          miercolesHorario && juevesHorario && viernesHorario && sabadoHorario ">
             <div class="row align-items-md-stretch">
                 <div class="col-md-4 pb-5">
-                    <!-- INICIO EDITAR JORNADA LUNES -->
+                    
                     <div class="h-100 p-5 text-white bg-dark rounded-3">
                         <h2>Lunes</h2>
                         <hr>
@@ -236,10 +236,10 @@
                             <h6>No tiene horarios cargados</h6>
                         </div>
                     </div>
-                    <!-- FIN EDITAR JORNADA LUNES -->
+                    
                 </div>
 
-                <!-- INICIO EDITAR HORARIOS MARTES -->
+                
                 <div class="col-md-4 pb-5">
                     <div class="h-100 p-5 text-white bg-dark rounded-3">
                         <h2>Martes</h2>
@@ -261,8 +261,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- FIN EDITAR HORARIOS MARTES -->             
-                <!-- INICIO DE EDITAR HORARIOS MIERCOLES -->
+                
+                
                 <div class="col-md-4 pb-5">
                     <div class="h-100 p-5 text-white bg-dark rounded-3">
                         <h2>Miercoles</h2>
@@ -284,8 +284,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- FIN DE EDITAR HORARIOS MIERCOLES -->               
-                <!-- INICIO DE EDITAR HORARIOS JUEVES -->
+
+
                 <div class="col-md-4 pb-5">
                     <div class="h-100 p-5 text-white bg-dark rounded-3">
                         <h2>Jueves</h2>
@@ -307,8 +307,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- FIN DE EDITAR HORARIOS JUEVES -->              
-                <!-- INICIO DE EDITAR HORARIOS VIERNES -->
+
+                
                 <div class="col-md-4 pb-5">
                     <div class="h-100 p-5 text-white bg-dark rounded-3">
                         <h2>Viernes</h2>
@@ -330,8 +330,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- FIN DE EDITAR HORARIOS VIERNES -->             
-                <!-- INICIO DE EDITAR HORARIOS SABADO -->
+
+                
                 <div class="col-md-4 pb-5">
                     <div class="h-100 p-5 text-white bg-dark rounded-3">
                         <h2>Sabado</h2>
@@ -353,9 +353,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- FIN DE EDITAR HORARIOS SABADO -->
             </div>
-        </div>
+        </div> -->
         <!-- FIN DE SI QUIERE EDITAR UNA JORNADA -->
     </div>
 </main>
