--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@
 /* Modifico el body */
 body{
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   justify-content: center;
   align-items: center;
