--- a/src/app/pages/especialista/mis-turnos/mis-turnos.component.html
+++ b/src/app/pages/especialista/mis-turnos/mis-turnos.component.html
@@ -13,31 +13,36 @@
 
         <!-- INICIO DE MOSTRAR LOS TURNOS ASIGNADOS AL ESPECIALISTA -->
         <div class="row mt-5" *ngIf="turnosMostrar.length > 0">
-            <div class="card-paciente col-md-4 col-xl-4 rounded-3 border border-3 border-secondary text-left pt-3"
-            *ngFor="let turno of turnosMostrar">
-            <h3>Paciente: {{getPaciente(turno.emailPaciente)}}</h3>
-            <h4>Especialidad: {{turno.especialidad}}</h4>
-            <h4>Fecha: {{turno.fecha}}</h4>
-            <h4>Hora: {{turno.horario.hora}}</h4>
-            <h4>Nro. Consultorio: {{turno.horario.nroConsultorio}}</h4>
-            <h4 class="text-capitalize">Estado: {{turno.estado}}</h4><hr>
+            <div class="col-md-4 mb-4" *ngFor="let turno of turnosMostrar">
+                <div class="card-paciente rounded-3 border border-3 border-secondary text-left pt-3">
+                    <h3>Paciente: {{getPaciente(turno.emailPaciente)}}</h3>
+                    <h4>Especialidad: {{turno.especialidad}}</h4>
+                    <h4>Fecha: {{turno.fecha}}</h4>
+                    <h4>Hora: {{turno.horario.hora}}</h4>
+                    <h4>Nro. Consultorio: {{turno.horario.nroConsultorio}}</h4>
+                    <h4 class="text-capitalize">Estado: {{turno.estado}}</h4><hr>
 
-            <!-- INICIO DEL MANEJO DE LOS TURNOS -->
-            <div class="row">
-                <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'pendiente'">
-                    <button class="btn btn-outline-success" (click)="onAceptar(turno)">Aceptar</button>
+                    <!-- INICIO DEL MANEJO DE LOS TURNOS -->
+                    <div class="row">
+                        <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'pendiente'">
+                            <button class="btn btn-outline-success" (click)="onAceptar(turno)">Aceptar</button>
+                        </div>
+                        <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'aceptado'" (click)="onCancelar(turno)">
+                            <button class="btn btn-outline-danger">Cancelar</button>
+                        </div>
+                        <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'pendiente'" (click)="onRechazar(turno)">
+                            <button class="btn btn-outline-danger">Rechazar</button>
+                        </div>
+                        <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'aceptado'" (click)="onFinalizar(turno)">
+                            <button class="btn btn-outline-warning">Finalizar</button>
+                        </div>
+                        <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'finalizado' && turno.calificacion != ''" 
+                            (click)="onVerCalificacion(turno)">
+                            <button class="btn btn-outline-info">Calificación</button>
+                        </div>
+                    </div>
+                    <!-- FIN DEL MANEJO DE LOS TURNOS -->
                 </div>
-                <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'aceptado'" (click)="onCancelar(turno)">
-                    <button class="btn btn-outline-danger">Cancelar</button>
-                </div>
-                <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'pendiente'" (click)="onRechazar(turno)">
-                    <button class="btn btn-outline-danger">Rechazar</button>
-                </div>
-                <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'aceptado'" (click)="onFinalizar(turno)">
-                    <button class="btn btn-outline-warning">Finalizar</button>
-                </div>
-            </div>
-            <!-- FIN DEL MANEJO DE LOS TURNOS -->
             </div>
         </div>
         <!-- FIN DE MOSTRAR LOS TURNOS ASIGNADOS AL ESPECIALISTA -->
