Terminado apartado turnos en administrador

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -54,6 +54,17 @@
                 </a>
             </li>
             <!-- FIN DE SOLICITAR TURNO -->
+
+            <!-- INICIO DE VER TURNOS -->
+            <li>
+                <a (click)="opcion('turnos')">
+                    <i class="fa fa-calendar fa-2x"></i>
+                    <span class="nav-text">
+                        Ver Turnos
+                    </span>
+                </a>
+            </li>
+            <!-- FIN DE VER TURNOS -->
         </ul>
         <!-- INICIO DEL LOGOUT -->
         <ul class="logout">
