--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -63,7 +63,9 @@
             <div *ngIf="select == 'solicitar-turno'">
                 <app-solicitar-turno-admin></app-solicitar-turno-admin>
             </div>
-
+            <div *ngIf="select == 'turnos'">
+                <app-turnos></app-turnos>
+            </div>
             <!-- FIN PARA VER LOS OTROS COMPONENTS -->
 
         </main>
