Implementando Captcha en registro Pacientes

--- a/src/app/components/forms/form-paciente/form-paciente.component.html
+++ b/src/app/components/forms/form-paciente/form-paciente.component.html
@@ -79,7 +79,7 @@
                     <hr class="my-4">
                     
                     <!-- INICIO DE TERMINOS Y CONDICIONES -->
-                    <div class="col-md-12">
+                    <!-- <div class="col-md-12">
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" id="terminos"
                             formControlName="terminos">
@@ -89,17 +89,21 @@
                                 &nbsp;&nbsp; Debe aceptar los terminos y condiciones.
                             </span>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- INICIO DE TERMINOS Y CONDICIONES -->
                     
                     <!-- INICIO DEL CAPTCHA -->
-                    <div class="re-captcha" style="margin-left: 50px;" *ngIf="form.valid">
-                        <!-- <re-captcha (resolved)="resolved($event!)" 
-                        siteKey="6LcNGQIqAAAAAMPgoAeH7PKi6PLnAkWegpmhAcKq" 
-                        style="min-height: 78px; width: 100%; display: block;"></re-captcha> -->
 
-
-
+                    <div class="col-md-12">
+                        <ngx-recaptcha2 #captchaElem
+                            [siteKey]="siteKey"
+                            (success)="handleSuccess($event)"
+                            [useGlobalDomain]="false"
+                            formControlName="recaptcha">
+                        </ngx-recaptcha2>
+                        <span *ngIf="isValidField('recaptcha')" class="form-text text-danger">
+                            Debe de cargar el captcha.
+                        </span>
                     </div>
                     <!-- FIN DEL CAPTCHA -->
                     
