--- a/src/app/pages/especialista/mis-turnos/mis-turnos.component.html
+++ b/src/app/pages/especialista/mis-turnos/mis-turnos.component.html
@@ -1,50 +1,65 @@
 <main>
     <div class="container py-4">
-        <!-- INICIO DE BUSCAR PARA FILTRAR TURNOS -->
-        <div class="row justify-content-start">
-            <div class="col-6 mt-2">
-                Buscar:
-            </div>
-            <div class="col-6">
-                <input type="text" class="input form-control" (input)="onFiltrarTurnos($event)">
-            </div>
-        </div>
-        <!-- FIN DE BUSCAR PARA FILTRAR TURNOS -->
+        <div *ngIf="!mostrarHistorial">
 
-        <!-- INICIO DE MOSTRAR LOS TURNOS ASIGNADOS AL ESPECIALISTA -->
-        <div class="row mt-5" *ngIf="turnosMostrar.length > 0">
-            <div class="col-md-4 mb-4" *ngFor="let turno of turnosMostrar">
-                <div class="card-paciente rounded-3 border border-3 border-secondary text-left pt-3">
-                    <h3>Paciente: {{getPaciente(turno.emailPaciente)}}</h3>
-                    <h4>Especialidad: {{turno.especialidad}}</h4>
-                    <h4>Fecha: {{turno.fecha}}</h4>
-                    <h4>Hora: {{turno.horario.hora}}</h4>
-                    <h4>Nro. Consultorio: {{turno.horario.nroConsultorio}}</h4>
-                    <h4 class="text-capitalize">Estado: {{turno.estado}}</h4><hr>
-
-                    <!-- INICIO DEL MANEJO DE LOS TURNOS -->
-                    <div class="row">
-                        <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'pendiente'">
-                            <button class="btn btn-outline-success" (click)="onAceptar(turno)">Aceptar</button>
-                        </div>
-                        <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'aceptado'" (click)="onCancelar(turno)">
-                            <button class="btn btn-outline-danger">Cancelar</button>
-                        </div>
-                        <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'pendiente'" (click)="onRechazar(turno)">
-                            <button class="btn btn-outline-danger">Rechazar</button>
-                        </div>
-                        <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'aceptado'" (click)="onFinalizar(turno)">
-                            <button class="btn btn-outline-warning">Finalizar</button>
-                        </div>
-                        <div class="col-3 mb-3 mx-2" *ngIf="turno.estado == 'finalizado' && turno.calificacion != ''" 
-                            (click)="onVerCalificacion(turno)">
-                            <button class="btn btn-outline-info">Calificación</button>
-                        </div>
-                    </div>
-                    <!-- FIN DEL MANEJO DE LOS TURNOS -->
+            <!-- INICIO DE BUSCAR PARA FILTRAR TURNOS -->
+            <div class="row justify-content-start">
+                <div class="col-6 mt-2">
+                    Buscar:
+                </div>
+                <div class="col-6">
+                    <input type="text" class="input form-control" (input)="onFiltrarTurnos($event)">
                 </div>
             </div>
+            <!-- FIN DE BUSCAR PARA FILTRAR TURNOS -->
+        
+            <!-- INICIO DE MOSTRAR LOS TURNOS DEL ESPECIALISTA -->
+            <div class="py-3" *ngIf="turnosMostrar.length > 0">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Paciente</th>
+                            <th>Especialidad</th>
+                            <th>Fecha</th>
+                            <th>Hora</th>
+                            <th>Nro. Consultorio</th>
+                            <th>Estado</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- INICIO DE RECORRER LOS TURNOS -->
+                        <tr *ngFor="let turno of turnosMostrar">
+                            <td>{{getPaciente(turno.emailPaciente)}}</td>
+                            <td>{{turno.especialidad}}</td>
+                            <td>{{turno.fecha}}</td>
+                            <td>{{turno.horario.hora}}</td>
+                            <td>{{turno.horario.nroConsultorio}}</td>
+                            <td>{{turno.estado}}</td>
+                            <td>
+                                <!-- INICIO DEL MANEJO DE LOS TURNOS -->
+                                <div class="btn-group" role="group">
+                                    <button *ngIf="turno.estado == 'pendiente'" class="btn btn-outline-success" (click)="onAceptar(turno)">Aceptar</button>
+                                    <button *ngIf="turno.estado == 'aceptado'" class="btn btn-outline-danger" (click)="onCancelar(turno)">Cancelar</button>
+                                    <button *ngIf="turno.estado == 'pendiente'" class="btn btn-outline-danger" (click)="onRechazar(turno)">Rechazar</button>
+                                    <button *ngIf="turno.estado == 'aceptado'" class="btn btn-outline-warning" (click)="onFinalizar(turno)">Finalizar</button>
+                                    <button *ngIf="turno.estado == 'finalizado' && turno.calificacion != ''" class="btn btn-outline-info" (click)="onVerCalificacion(turno)">Calificación</button>
+                                    <button *ngIf="turno.estado == 'finalizado' && !turno.historialClinico" class="btn btn-outline-warning" (click)="onCargarHistoriaClinica(turno)">Cargar Historia Clinica</button>
+                                </div>
+                                <!-- FIN DEL MANEJO DE LOS TURNOS -->
+                            </td>
+                        </tr>
+                        <!-- FIN DE RECORRER LOS TURNOS -->
+                    </tbody>
+                </table>
+            </div>
+            <!-- FIN DE MOSTRAR LOS TURNOS DEL ESPECIALISTA -->
         </div>
-        <!-- FIN DE MOSTRAR LOS TURNOS ASIGNADOS AL ESPECIALISTA -->
     </div>
+
+    <!-- INICIO DE MOSTRAR EL COMPONENTE PARA VER EL HISTORIAL -->
+    <div *ngIf="mostrarHistorial">
+        <app-cargar-historial (turnoHistorial)="onGetHistorial($event)"></app-cargar-historial>
+    </div>
+    <!-- FIN DE MOSTRAR EL COMPONENTE PARA VER EL HISTORIAL -->
 </main>
