--- a/src/app/components/tables/mi-historial-clinico/mi-historial-clinico.component.css
+++ b/src/app/components/tables/mi-historial-clinico/mi-historial-clinico.component.css
@@ -1,3 +1,8 @@
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
 /* INICIO DE MODIFICACION DE LA TABLA */
 table {
   border-collapse: collapse;
@@ -13,12 +18,35 @@ th, td {
 }
 
 th {
+  background: rgb(14, 28, 28);
+}
+
+
+td {
   background: darkslategrey;
 }
 
 tr:hover {
   background-color: #f5f5f5;
 }
-  
-
 /* FIN DE MODIFICACION DE LA TABLA */
+
+/* INICIO DE MODIFICAION DEL SPINNER */
+.spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.mat-progress-spinner {
+  width: 80px;
+  height: 80px;
+}
+/* FIN DE MODIFICAION DEL SPINNER */
