--- a/src/app/modules/navbar/navbar.component.html
+++ b/src/app/modules/navbar/navbar.component.html
@@ -69,7 +69,7 @@
                     <a class="nav-link active text-light" aria-current="page" (click)="goTo('/especialista/mis-turnos')">Mis Turnos</a>
                 </li>
                 <li>
-                    <a class="nav-link active text-light" aria-current="page" (click)="goTo('/especialista/pacientes')">Mis Pacientes</a>
+                    <a class="nav-link active text-light" aria-current="page" (click)="goTo('/especialista/mis-pacientes')">Mis Pacientes</a>
                 </li>
                 <li>
                     <a class="nav-link active text-light" (click)="logOut()">Log Out</a>
