Administrador ve historiales pac

--- a/src/app/pages/especialista/mis-pacientes/mis-pacientes.component.html
+++ b/src/app/pages/especialista/mis-pacientes/mis-pacientes.component.html
@@ -17,14 +17,14 @@
 
       <!-- INICIO DE MOSTRAR LOS HISTORIALES -->
       <div class="py-3 justify-content-center" *ngIf="historiaClinica.length > 0">
-        <!-- INICIO DE RESETEAR EL HISTORIAL -->
+        
         <button type="button" class="btn btn-sm btn-outline-danger m-2" (click)="onReset()">Cerrar</button><br>
         <!-- FIN DE RESETEAR EL HISTORIAL -->
         <div class="table-responsive">
           <table class="table">
             <thead>
               <tr>
-                <th>Especialista</th>
+                <th>Paciente</th>
                 <th>Especialidad</th>
                 <th>Peso</th>
                 <th>Altura</th>
