--- a/src/app/pages/users/pacientes/pacientes.component.html
+++ b/src/app/pages/users/pacientes/pacientes.component.html
@@ -1,29 +1,79 @@
 <main>
     <!-- INICIO DEL CONTENEDOR DE PACIENTES -->
-    <div class="container" *ngIf="pacientes">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <div class="col-6" *ngFor="let paciente of pacientes">
-                <div class="card">
-                    <img src="{{paciente.img1}}" alt="img-pac">
-                    <div class="card-body">
-                        <h3>{{paciente.apellido}}, {{paciente.nombre}}</h3>
-                        <h4>DNI: {{paciente.dni}}</h4>
-                        <h4>Email: {{paciente.email}}</h4>
-                        <h4>Edad: {{paciente.edad}}</h4>
-                        <h4>Obra Social: {{paciente.obraSocial}}</h4>
-                    </div>
+    <div class="container" *ngIf="showPacientes && pacientes">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col-6" *ngFor="let paciente of pacientes">
+          <div class="card">
+            <img src="{{paciente.img1}}" alt="img-pac">
+            <div class="card-body">
+              <h3>{{paciente.apellido}}, {{paciente.nombre}}</h3>
+              <h4>DNI: {{paciente.dni}}</h4>
+              <h4>Email: {{paciente.email}}</h4>
+              <h4>Edad: {{paciente.edad}}</h4>
+              <h4>Obra Social: {{paciente.obraSocial}}</h4>
+  
+              <!-- INICIO PARA HABILITAR EL HISTORIAL -->
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary"
+                          (click)="onGetHistorial(paciente)">Ver Historial</button>
                 </div>
+              </div>
+              <!-- FIN PARA HABILITAR EL HISTORIAL -->
             </div>
+          </div>
         </div>
+      </div>
     </div>
+    <!-- FIN DEL CONTENEDOR DE PACIENTES -->
+  
+    <!-- INICIO PARA VER EL HISTORIAL CLINICO DEL PACIENTE SELECCIONADO -->
+    <div class="py-3 justify-content-center" *ngIf="historialClinico.length > 0">
+      <button type="button" class="btn btn-sm btn-outline-danger m-2" (click)="onReset()">Cerrar</button><br>
+      <!-- FIN DE RESETEAR EL HISTORIAL -->
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Paciente</th>
+              <th>Especialista</th>
+              <th>Especialidad</th>
+              <th>Peso</th>
+              <th>Altura</th>
+              <th>Presión</th>
+              <th>Temperatura</th>
+              <th>Observación</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let historiaClinica of historialClinico">
+              <td>{{getPaciente(historiaClinica.emailPaciente)}}</td>
+              <td>{{getEspecialista(historiaClinica.emailEspecialista)}}</td>
+              <td>{{historiaClinica.especialidad}}</td>
+              <td>{{historiaClinica.peso}}</td>
+              <td>{{historiaClinica.altura}}</td>
+              <td>{{historiaClinica.presion}}</td>
+              <td>{{historiaClinica.temperatura}}</td>
+              <td>
+                <div class="text-light" *ngFor="let dato of historiaClinica.datos">
+                  {{ sacarKey(dato) }}: {{ dato[sacarKey(dato)] }}
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <!-- FIN PARA VER EL HISTORIAL CLINICO DEL PACIENTE SELECCIONADO -->
+  
     <hr>
     <!-- INICIO DEL BOTON PARA DAR EL ALTA DEL PACIENTE -->
-    <div class="div-btn">
-        <app-form-paciente *ngIf="showFormComponent" (registrationSuccess)="onRegistrationSuccess($event)"></app-form-paciente>
-        <button class="btn" (click)="onAddPacienteAdmin()">
-            {{ showFormComponent ? 'Cerrar' : 'Dar de Alta Paciente' }}
-        </button>
+    <div class="div-btn" *ngIf="showPacientes">
+      <app-form-paciente *ngIf="showFormComponent" (registrationSuccess)="onRegistrationSuccess($event)"></app-form-paciente>
+      <button class="btn" (click)="onAddPacienteAdmin()">
+        {{ showFormComponent ? 'Cerrar' : 'Dar de Alta Paciente' }}
+      </button>
     </div><br>
     <!-- FIN DEL BOTON PARA DAR EL ALTA DEL PACIENTE -->
-    <!-- FIN DEL CONTENEDOR DE PACIENTES -->
 </main>
+  
