--- a/src/app/pages/users/pacientes/pacientes.component.css
+++ b/src/app/pages/users/pacientes/pacientes.component.css
@@ -40,3 +40,45 @@ transition: .5s;
     top: 0;
 }
 
+/* INICIO DE MODIFICACION DE LA TABLA */
+.table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.table th, .table td {
+  padding: 7px;
+  text-align: center;
+  border: 1px solid #ddd;
+  color: white;
+  background: darkslategrey;
+}
+
+.table th {
+  background: rgb(14, 28, 28);
+}
+
+.table td {
+  background: darkslategrey;
+}
+
+.table tr:hover {
+  background-color: #f5f5f5;
+}
+
+.table td div {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.table td {
+  min-width: 100px; /* Ajusta el tamaño mínimo de las celdas según sea necesario */
+  max-width: 200px; /* Ajusta el tamaño máximo de las celdas según sea necesario */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* FIN DE MODIFICACION DE LA TABLA */
+  
