--- a/src/app/pages/welcome/welcome.component.css
+++ b/src/app/pages/welcome/welcome.component.css
@@ -23,7 +23,8 @@ main {
   }
   
   .container {
-  width: 100%;
+  /* width: 100%; */
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,7 +32,8 @@ main {
   
   /* Estilos para el contenedor de imagen y texto */
   .container-contenidos {
-  width: 100%;
+  /* width: 100%; */
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -152,7 +154,7 @@ main {
   
   footer{
     /* position: relative; */
-    width: 100%;
+    width: 100vw;
     /* background: linear-gradient(#3c58b9,#5a84d7,#3c58b9); */
     /* Tamaño del footer */
     /* min-height: 100px; */
